<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmClock</string>
    <string name="action_settings">Settings</string>
    <string name="clockVal">12:00 am</string>
    <string name="alarmVal">12:00 am</string>
    <string name="hrsUpButtonLabel">Hours++</string>
    <string name="hrsDownButtonLabel">Hours--</string>
    <string name="minUpButtonLabel">Minute++</string>
    <string name="minDownButtonLabel">Minute--</string>
    <string name="sayTimeButtonLabel">Say Time</string>
    <string name="setAlarmButtonLabel">Toggle\nAlarm</string>
</resources>
