
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/clockValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:paddingBottom="5dp"
        android:textSize="@dimen/main_text_size"
        android:textColor="#ffffff"
        android:text="@string/clockVal" />

    <TextView
        android:id="@+id/alarmValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/minUpButton"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:textSize="@dimen/main_text_size"
        android:textColor="#ffffff"
        android:text="@string/alarmVal" />

    <Button
        android:id="@+id/hrsUpButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignLeft="@+id/clockValue"
        android:layout_centerVertical="true"
        android:text="@string/hrsUpButtonLabel" />

    <Button
        android:id="@+id/hrsDownButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/hrsUpButton"
        android:layout_alignLeft="@+id/hrsUpButton"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/hrsDownButtonLabel" />

    <Button
        android:id="@+id/minUpButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignBottom="@+id/hrsUpButton"
        android:layout_alignRight="@+id/clockValue"
        android:text="@string/minUpButtonLabel" />

    <Button
        android:id="@+id/minDownButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/minUpButton"
        android:layout_alignRight="@+id/minUpButton"
        android:layout_alignBottom="@+id/hrsDownButton"
        android:text="@string/minDownButtonLabel" />

    <Button
        android:id="@+id/sayTimeButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button2_height"
        android:layout_below="@+id/hrsDownButton"
        android:layout_alignLeft="@+id/hrsDownButton"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/sayTimeButtonLabel" />

    <Button
        android:id="@+id/setAlarmButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button2_height"
        android:layout_below="@+id/minDownButton"
        android:layout_alignRight="@+id/minDownButton"
        android:layout_alignBottom="@+id/sayTimeButton"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/setAlarmButtonLabel" />

</RelativeLayout>
